@@ -1,3 +1,8 @@
+2006-03-12  Luca Cavalli  <loopback@slackit.org>
+
+	* gnome-da-capplet.c: (terminal_checkbutton_toggled_cb): remove
+	double gconf value setting. Closes bug #334331.
+
 2006-03-06  Luca Cavalli  <loopback@slackit.org>
 
 	* gnome-da-capplet.c: (web_combo_changed_cb),
